2006-07-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_apply_tr): reordered checks - primitives are
	provably called more often than closures

	* dfsch/dfsch.h (dfsch_type_t): apply method for user-defined
	applicable objects

2006-07-16  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (dfsch_hash_2_alist): alist->hash

2006-07-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_exception_write): Better stacktraces
	(containing processed forms)
	(dfsch_exception_write): Minor formating changes

	* src/threads.c (dfsch_channel_read): Erase readed items from buffer

	* src/dfsch.c (dfsch_break): signal-safe exceptions

	* src/threads.c (dfsch_thread_detach): Aehm... missing assignment

	* scm/supermarket.scm: Some example code for multithreading

	* src/threads.c (dfsch_channel_create): Channels (which seems like
	preferable method of communication between threads)

2006-07-14  Ales Hakl  <ales at hakl dot net>

	* src/threads.c (dfsch_condition_create): Condition variables

2006-07-13  Ales Hakl  <ales at hakl dot net>

	* src/threads.c: Mutexes (non-working)
	(dfsch_mutex_*): added asignments to m (this is why it didn't work) 

	* src/dfsch.c (dfsch_call_ec): Removed volatile (there is no
	reason for it to be there, probably)
	(dfsch_eval_proc_tr): dtto.

	* src/number.c (dfsch_number_to_string): added cast to number_t*

	* src/threads.c: Multithreading support (or something like that)

2006-06-18  Ales Hakl  <ales at hakl dot net>

	* dfsch/*.h: Added documentation comments

2006-06-11  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h: Added documentation comments to argument macros

	* *: Removed all references of dfsch_make_string() and dfsch_string()

2006-06-07  Ales Hakl  <ales at hakl dot net>

	* dfsch/dfsch.h: Updated doxygen tags

2006-06-04  Ales Hakl  <ales at hakl dot net>

	* dfsch_list_length_check used almost anywhere where makes sense

	* src/strings.c (dfsch_list_2_string): use dfsch_list_length_check
