@@ -20,7 +20,8 @@ libdfsch_la_SOURCES = src/dfsch.c dfsch/dfsch.h src/object.h src/internal.h\
 	src/hash.c dfsch/hash.h \
 	src/promise.c dfsch/promise.h \
 	src/number.c dfsch/number.h \
-	src/strings.c dfsch/strings.h 
+	src/strings.c dfsch/strings.h \
+	src/wrapper.c dfsch/wrapper.h
 
 libdfsch_la_LDFLAGS = -version-info 4:0:0
 libdfsch_la_LIBADD =  -lgc -lpthread -ldl -lm
