@@ -10,5 +10,6 @@ extern void dfsch__hash_native_register(dfsch_ctx_t *ctx);
 extern void dfsch__promise_native_register(dfsch_ctx_t *ctx);
 extern void dfsch__number_native_register(dfsch_ctx_t *ctx);
 extern void dfsch__string_native_register(dfsch_ctx_t *ctx);
+extern void dfsch__wrapper_native_register(dfsch_ctx_t *ctx);
 
 #endif
