@@ -680,5 +680,6 @@ void dfsch__native_register(dfsch_ctx_t *ctx){
   dfsch__promise_native_register(ctx);
   dfsch__number_native_register(ctx);
   dfsch__string_native_register(ctx);
+  dfsch__wrapper_native_register(ctx);
 
 }
